--- a/explorer-ja.rc
+++ b/explorer-ja.rc
@@ -34,7 +34,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "終了(&X)",                    ID_FILE_EXIT
     END
-    POPUP "表\示(&V)"
+    POPUP "表示(&V)"
     BEGIN
         MENUITEM "ツール バー(&T)",             ID_VIEW_TOOL_BAR
         MENUITEM "エキストラ バー(&E)",         ID_VIEW_EXTRA_BAR
@@ -43,15 +43,15 @@ BEGIN
         MENUITEM "ステータス バー(&S)",         ID_VIEW_STATUSBAR
         MENUITEM SEPARATOR
         MENUITEM "最新の情報に更新(&R)\tF5",    ID_REFRESH
-        MENUITEM "全画面表\示(&U)\tCtrl+Shift+S",  ID_VIEW_FULLSCREEN
+        MENUITEM "全画面表示(&U)\tCtrl+Shift+S",  ID_VIEW_FULLSCREEN
         MENUITEM "SDI",                         ID_VIEW_SDI
     END
     POPUP "ウィンドウ(&W)"
     BEGIN
         MENUITEM "新しいウィンドウ(&W)",        ID_WINDOW_NEW
-        MENUITEM "重ねて表\示\tShift+F5",        ID_WINDOW_CASCADE
-        MENUITEM "水平に並べて表\示(&H)",        ID_WINDOW_TILE_HORZ
-        MENUITEM "垂直に並べて表\示(&V)\tShift+F4", ID_WINDOW_TILE_VERT
+        MENUITEM "重ねて表示\tShift+F5",        ID_WINDOW_CASCADE
+        MENUITEM "水平に並べて表示(&H)",        ID_WINDOW_TILE_HORZ
+        MENUITEM "垂直に並べて表示(&V)\tShift+F4", ID_WINDOW_TILE_VERT
         MENUITEM "自動整列",                    ID_WINDOW_AUTOSORT
         MENUITEM "最小化された子ウィンドウを整列(&S)", ID_WINDOW_ARRANGE
     END
@@ -91,8 +91,8 @@ IDM_NOTIFYAREA MENU DISCARDABLE
 BEGIN
     POPUP ""
     BEGIN
-        MENUITEM "隠されたアイコンを表\示する(&S)", ID_SHOW_HIDDEN_ICONS
-        MENUITEM "アイコン ボタンを表\示する(&B)",  ID_SHOW_ICON_BUTTON
+        MENUITEM "隠されたアイコンを表示する(&S)", ID_SHOW_HIDDEN_ICONS
+        MENUITEM "アイコン ボタンを表示する(&B)",  ID_SHOW_ICON_BUTTON
         MENUITEM "通知のカスタマイズ(&C)...",   ID_CONFIG_NOTIFYAREA
         MENUITEM "日付と時刻の調整(&T)...",     ID_CONFIG_TIME
         MENUITEM SEPARATOR
@@ -108,14 +108,14 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "閉じる(&C)",                  ID_FILE_EXIT
     END
-    POPUP "表\示(&V)"
+    POPUP "表示(&V)"
     BEGIN
         MENUITEM "ツール バー(&T)",             ID_VIEW_TOOL_BAR
         MENUITEM "サイド バー(&I)",             ID_VIEW_SIDE_BAR, GRAYED
         MENUITEM "ステータス バー(&S)",         ID_VIEW_STATUSBAR
         MENUITEM SEPARATOR
         MENUITEM "最新の情報に更新(&R)\tF5",    ID_REFRESH
-        MENUITEM "全画面表\示(&U)\tCtrl+Shift+S",  ID_VIEW_FULLSCREEN
+        MENUITEM "全画面表示(&U)\tCtrl+Shift+S",  ID_VIEW_FULLSCREEN
         MENUITEM "MDI (&M)",                        ID_VIEW_MDI
     END
     POPUP "ツール(&T)"
@@ -198,7 +198,7 @@ BEGIN
                     BS_BOTTOM | WS_TABSTOP,110,121,46,44
     CONTROL         "",IDC_ICON_ALIGN_11,"Button",BS_OWNERDRAW | BS_BOTTOM |
                     WS_TABSTOP,159,121,46,44
-//    CONTROL         "デスクトップにバージョンを表\示する(&V)",ID_DESKTOP_VERSION,"Button",
+//    CONTROL         "デスクトップにバージョンを表示する(&V)",ID_DESKTOP_VERSION,"Button",
 //                    BS_AUTOCHECKBOX | WS_TABSTOP,7,177,91,10
 END
 
@@ -207,7 +207,7 @@ STYLE DS_SHELLFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "タスク バーのプロパティ"
 FONT 9, "MS UI Gothic"
 BEGIN
-    CONTROL         "時計を表\示する(&C)",ID_SHOW_CLOCK,"Button",BS_AUTOCHECKBOX |
+    CONTROL         "時計を表示する(&C)",ID_SHOW_CLOCK,"Button",BS_AUTOCHECKBOX |
                     WS_TABSTOP,7,152,52,10
     CONTROL         "アクティブでない通知アイコンを隠す(&H)",
                     ID_HIDE_INACTIVE_ICONS,"Button",BS_AUTOCHECKBOX |
@@ -237,8 +237,8 @@ BEGIN
     EDITTEXT        IDC_NOTIFY_TITLE,58,60,143,14,ES_AUTOHSCROLL
     LTEXT           "モジュールの場所(&M):",IDC_LABEL3,7,81,43,8
     EDITTEXT        IDC_NOTIFY_MODULE,58,78,143,14,ES_AUTOHSCROLL
-    GROUPBOX        "表\示モード(&D)",IDC_LABEL4,7,96,157,28
-    CONTROL         "表\示する(&S)",IDC_NOTIFY_SHOW,"Button",BS_AUTORADIOBUTTON |
+    GROUPBOX        "表示モード(&D)",IDC_LABEL4,7,96,157,28
+    CONTROL         "表示する(&S)",IDC_NOTIFY_SHOW,"Button",BS_AUTORADIOBUTTON |
                     WS_TABSTOP,15,108,33,10
     CONTROL         "隠す(&H)",IDC_NOTIFY_HIDE,"Button",BS_AUTORADIOBUTTON,66,
                     108,29,10
@@ -248,7 +248,7 @@ BEGIN
     LTEXT           "最終変更(&L):",IDC_LABEL6,7,132,43,8
     EDITTEXT        IDC_LAST_CHANGE,59,129,105,14,ES_AUTOHSCROLL |
                     ES_READONLY
-    CONTROL         "隠れたアイコンも表\示(&W)",ID_SHOW_HIDDEN_ICONS,"Button",
+    CONTROL         "隠れたアイコンも表示(&W)",ID_SHOW_HIDDEN_ICONS,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,154,56,10
     DEFPUSHBUTTON   "OK (&O)",IDOK,91,153,50,14,WS_GROUP
     PUSHBUTTON      "キャンセル(&C)",IDCANCEL,151,153,50,14
@@ -352,12 +352,12 @@ BEGIN
     IDS_VOLUME              "音量"
     IDS_ITEMS_CUR           "現在のアイコン"
     IDS_ITEMS_CONFIGURED    "設定"
-    IDS_ITEMS_VISIBLE       "表\示"
-    IDS_ITEMS_HIDDEN        "非表\示"
-    IDS_NOTIFY_SHOW         "表\示する"
+    IDS_ITEMS_VISIBLE       "表示"
+    IDS_ITEMS_HIDDEN        "非表示"
+    IDS_NOTIFY_SHOW         "表示する"
     IDS_NOTIFY_HIDE         "隠す"
     IDS_NOTIFY_AUTOHIDE     "自動的に隠す"
-    IDS_SHOW_HIDDEN_ICONS   "隠れているアイコンも表\示する"
+    IDS_SHOW_HIDDEN_ICONS   "隠れているアイコンも表示する"
     IDS_HIDE_ICONS          "アイコンを隠す"
     IDS_TERMINATE           "ROS Explorer を終了する"
 END
