--- a/explorer.vcxproj.filters
+++ b/explorer.vcxproj.filters
@@ -187,6 +187,7 @@
   <ItemGroup>
     <ResourceCompile Include="explorer_intres.rc" />
     <ResourceCompile Include="explorer-en.rc" />
+    <ResourceCompile Include="explorer-zh.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\action.ico">
