--- a/explorer_intres.rc
+++ b/explorer_intres.rc
@@ -94,9 +94,9 @@ BEGIN
     "BEGIN\r\n"
     "IDS_VERSION_STR """"\r\n"
     "#ifdef UNICODE\r\n"
-    "IDS_EXPLORER_VERSION_STR ""ROS Explorer%0s""\r\n"
+    "IDS_EXPLORER_VERSION_STR ""PExlorer%0s""\r\n"
     "#else\r\n"
-    "IDS_EXPLORER_VERSION_STR ""ROS Explorer Ansi%0s""\r\n"
+    "IDS_EXPLORER_VERSION_STR ""PExlorer Ansi%0s""\r\n"
     "#endif\r\n"
     "END\r\n"
     "#endif\r\n"
@@ -132,7 +132,7 @@ IDI_ARROW               ICON                    "res/arrow.ico"
 IDI_ARROW_SELECTED      ICON                    "res/arrowsel.ico"
 IDI_APPICON             ICON                    "res/appicon.ico"
 IDI_FLOATING            ICON                    "res/floating.ico"
-IDI_REACTOS_BIG         ICON                    "res/ros-big.ico"
+IDI_PEXLORER_BIG        ICON                    "res/pexlorer-big.ico"
 IDI_CONFIG              ICON                    "res/config.ico"
 IDI_DOCUMENTS           ICON                    "res/documents.ico"
 IDI_FAVORITES           ICON                    "res/favorites.ico"
@@ -144,7 +144,7 @@ IDI_FOLDER              ICON                    "res/folder.ico"
 IDI_SEARCH_DOC          ICON                    "res/search-doc.ico"
 IDI_PRINTER             ICON                    "res/printer.ico"
 IDI_NETWORK             ICON                    "res/network.ico"
-IDI_REACTOS             ICON                    "res/reactos.ico"
+IDI_PEXLORER            ICON                    "res/pexlorer.ico"
 IDI_SPEAKER             ICON                    "res/speaker.ico"
 IDI_DOT                 ICON                    "res/dot.ico"
 IDI_DOT_TRANS           ICON                    "res/dot_trans.ico"
