--- a/explorer_intres.rc
+++ b/explorer_intres.rc
@@ -125,7 +125,8 @@ END
 // remains consistent on all systems.
 IDI_COMPUTER            ICON                    "res/computer.ico"
 IDI_EXPLORER            ICON                    "res/explorer.ico"
-IDI_STARTMENU           ICON                    "res/startmenu.ico"
+IDI_STARTMENU_W         ICON                    "res/startmenu_w.ico"
+IDI_STARTMENU_B         ICON                    "res/startmenu_b.ico"
 IDI_LOGOFF              ICON                    "res/logoff.ico"
 IDI_SHUTDOWN            ICON                    "res/shutdown.ico"
 IDI_TERMINATE           ICON                    "res/terminate.ico"
@@ -153,8 +154,10 @@ IDI_DOT_TRANS           ICON                    "res/dot_trans.ico"
 IDI_DOT_RED             ICON                    "res/dot_red.ico"
 IDI_ARROW_UP            ICON                    "res/arrow_up.ico"
 IDI_ARROW_DOWN          ICON                    "res/arrow_dwn.ico"
-IDI_NOTIFY_L            ICON                    "res/notify_l.ico"
-IDI_NOTIFY_R            ICON                    "res/notify_r.ico"
+IDI_NOTIFY_L_W          ICON                    "res/notify_l_w.ico"
+IDI_NOTIFY_R_W          ICON                    "res/notify_r_w.ico"
+IDI_NOTIFY_L_B          ICON                    "res/notify_l_b.ico"
+IDI_NOTIFY_R_B          ICON                    "res/notify_r_b.ico"
 IDI_MINIMIZE            ICON                    "res/minimize.ico"
 IDI_CONTROLPAN          ICON                    "res/control-panel.ico"
 IDI_DESKSETTING         ICON                    "res/desktop-settings.ico"
