--- a/PExlorer_VS2015.vcxproj
+++ b/PExlorer_VS2015.vcxproj
@@ -293,6 +293,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="shell\fileexplorer.cpp" />
     <ClCompile Include="utility\dragdropimpl.cpp" />
     <ClCompile Include="utility\shellbrowserimpl.cpp" />
     <ClCompile Include="utility\shellclasses.cpp" />
@@ -345,6 +346,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jconfig\jcfg.h" />
+    <ClInclude Include="shell\fileexplorer.h" />
     <ClInclude Include="utility\dragdropimpl.h" />
     <ClInclude Include="utility\shellbrowserimpl.h" />
     <ClInclude Include="utility\shellclasses.h" />
